--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "4.2.1",
     "core-js": "^2.4.1",
+    "injectable": "0.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -29,6 +31,7 @@
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/bootstrap": "4.2.0",
     "@types/core-js": "2.5.0",
     "@types/jasmine": "3.3.5",
     "@types/jasminewd2": "2.0.6",
